--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
+    id 'org.springframework.boot' version '2.7.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'org.springframework.boot' version '2.5.0' apply false
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
 }
 
 group 'com.aws.peachworld'
@@ -13,13 +13,13 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.1'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.6.1'
-    implementation 'org.springframework.boot:spring-boot-configuration-processor:2.5.5'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.12.5'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
-    implementation 'org.springframework.boot:spring-boot-starter-aop:2.5.5'
+    implementation  group: 'junit', name: 'junit', version: '4.13'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'net.rakugakibox.util:yaml-resource-bundle:1.1'
     implementation "io.springfox:springfox-swagger2:2.9.2"
     implementation "io.springfox:springfox-swagger-ui:2.9.2"
@@ -35,3 +35,4 @@ dependencies {
     implementation 'org.postgresql:postgresql:42.3.1'
 
 }
+
